metriken/tests/ui/metadata-duplicate.fail.stderr
error: duplicate metadata entry `a`
 --> tests/ui/metadata-duplicate.fail.rs:7:9
  |
7 |         "a" = "value"
  |         ^^^
